# kk-lo

./: .env.example  .gitignore  .replit  agent.py  config.py  log.py  main.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  scanner.py  test_all.py  test_phase2.py
agents/: options_agent.py
api/: main.py
data/: models.py  watchlist.json
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/account/: AccountCards.tsx  AccountView.tsx  PositionsTable.tsx
frontend/src/components/analysis/: AnalysisView.tsx  IVPanel.tsx  IndicatorCharts.tsx  NewsFeed.tsx  OptionsChainTable.tsx  PriceChart.tsx  StockHeader.tsx  StrategyCard.tsx  StrategyPanel.tsx  TechnicalPanel.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatView.tsx
frontend/src/components/dashboard/: TickerCard.tsx  WatchlistGrid.tsx
frontend/src/components/layout/: TabNav.tsx  TopBar.tsx
frontend/src/components/scanner/: AlertsTable.tsx  ScannerView.tsx
frontend/src/components/shared/: LoadingSpinner.tsx  SignalBadge.tsx  SortableTable.tsx  StatCard.tsx  StrengthMeter.tsx  TickerSearch.tsx  Toast.tsx
frontend/src/lib/: api.ts  format.ts  store.ts  types.ts  websocket.ts
jobs/: daily_collector.py
tools/: __init__.py  iv_tracker.py  market_data.py  news_sentiment.py  options_chain.py  strategy.py  technical.py  trade_executor.py  unusual_activity.py
